--- a/black_box/xai/demo_xai.ipynb
+++ b/black_box/xai/demo_xai.ipynb
@@ -3,16 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9487512",
+   "id": "7613de97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from anthropic_client import AnthropicClient\n",
+    "from xai_client import XAIClient\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
     "load_dotenv()\n",
-    "client = AnthropicClient(api_key=os.getenv(\"ANTHROPIC_API_KEY\"), model=\"claude-sonnet-4-20250514\")\n",
+    "client = XAIClient(api_key=os.getenv(\"XAI_API_KEY\"), model=\"grok-3-fast\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    response = client.generate_response(prompt='What is the capital of Malaysia?')\n",
