--- a/black_box/gemini/demo_gemini.ipynb
+++ b/black_box/gemini/demo_gemini.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "from black_box.google.gemini_client import GeminiClient\n",
+    "from gemini_client import GeminiClient\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
